--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-tsparticles": "^2.2.4",
     "tsparticles": "^2.2.4"
   },
